--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header class="sticky top-0 z-50 bg-white/90 backdrop-blur-sm shadow-sm">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center">
-                <img src="neslogo.png" alt="Nourish with Nes Logo" class="h-10 w-auto">
+                <img src="neslogo.png" alt="Nourish with Nes Logo" class="h-12 md:h-16 lg:h-20 w-auto">
             </a>
             <nav class="hidden md:flex space-x-8 text-sm font-medium">
                 <a href="#services" class="hover:text-gray-900 transition duration-300">Work With Me</a>
